--- a/code practice/index.html
+++ b/code practice/index.html
@@ -1,28 +1,22 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section class="">
+		<div class="nav">
+			<img src="iam_logo_white.png">
+		</div>
+		<div class="content" id="content">
 			<video muted autoplay loop class="video">
 				<source src="intro.mp4">
 				<p>Your browser doesn't support video</p>
 			</video>
-			<div class="black-layer">
-			</div>
+			<div class="video-layer"></div>
 			<div class="iam-logo">
 				<img src="iam_logo_white.png">
 			</div>
-			<div class="nav">
-				<img src="title_big_grey.png">
-                <ul id="introdcution"> 
-                    <li class= "intro">
-                     <a href= "www.facebook.com"> Main </a>   
-                    </li>
-                </ul>
-                            
-                </div>
-			</div>
-		</section>
+			<div class="abc"></div>
+		</div>
 	</body>
 </html>
