--- a/code practice/index.html
+++ b/code practice/index.html
@@ -4,19 +4,22 @@
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<video muted autoplay loop class="video">
+			<source src="intro.mp4">
+			<p>Your browser doesn't support video</p>
+		</video>
+		<div class="video-layer"></div>
 		<div class="nav">
 			<img src="iam_logo_white.png">
 		</div>
 		<div class="content" id="content">
-			<video muted autoplay loop class="video">
-				<source src="intro.mp4">
-				<p>Your browser doesn't support video</p>
-			</video>
-			<div class="video-layer"></div>
-			<div class="iam-logo">
-				<img src="iam_logo_white.png">
+			<div class="content-left">
+				<div id="iam-logo">
+					<img src="iam_logo_white.png">
+				</div>
 			</div>
-			<div class="abc"></div>
+			<div class="content-right">
+			</div>
 		</div>
 	</body>
 </html>
