--- a/IAM website FA15/index.html
+++ b/IAM website FA15/index.html
@@ -1,21 +1,21 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<video muted autoplay loop class="video">
-			<source src="intro.mp4">
+			<source src="img/intro.mp4">
 			<p>Your browser doesn't support video</p>
 		</video>
 		<div class="video-layer"></div>
 		<div class="nav">
-			<img src="iam_logo_white.png">
+			<img src="img/iam_logo_white.png">
 		</div>
 		<div class="content" id="content">
 			<div class="content-left">
 				<div id="iam-logo">
-					<img src="iam_logo_white.png">
+					<img src="img/iam_logo_white.png">
 				</div>
 			</div>
 			<div class="content-right">
