--- a/IAM website FA15/index.html
+++ b/IAM website FA15/index.html
@@ -15,8 +15,16 @@
 		<div class="content" id="content">
 			<div class="content-left">
 				<div id="iam-logo">
-					<img src="img/iam_logo_white.png">
+                <li>
+					<ul><img src="img/iam_logo_white.png"><ul>
+                    <ul><img src="img/about.png"></ul>
+                    <ul><img src="img/client.png"></ul>
+                    <ul><img src="img/title_big_grey.png"><ul>
+                    <ul><img src="img/careers.png"></ul>
+                    <ul><img src="img/conatct.png"></ul>
+                    </li>
 				</div>
+                
 			</div>
 			<div class="content-right">
 			</div>
