--- a/IAM website FA15/career.html
+++ b/IAM website FA15/career.html
@@ -15,10 +15,10 @@ Designed by Sarah Minkyoung Cho
 		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	</head>
 	<body class="collapsed">
-		<video muted autoplay loop class="video">
+		<!--<video muted autoplay loop class="video">
 			<source src="img/intro.mp4">
 			<p>Your browser doesn't support video</p>
-		</video>
+		</video>-->
 		<div class="nav">
 			<img src="img/iam_logo_white.png" onclick="window.location='index.html';">
 			<div class="nav-icons">
@@ -34,9 +34,9 @@ Designed by Sarah Minkyoung Cho
 					<img src="img/icon_team.png">
 					<p>The Team</p>
 				</div>
-				<div class="icon" onclick="window.location='career.html';">
+				<div style="background-color:#03030a;" class="icon" onclick="window.location='career.html';">
 					<img src="img/icon_careers.png">
-					<p>Careers</p>
+					<p style="color:80ffd4">Careers</p>
 				</div>
 				<div class="icon" onclick="window.location='contact.html';">
 					<img src="img/icon_contact.png">
@@ -45,10 +45,10 @@ Designed by Sarah Minkyoung Cho
 			</div>
 		</div>
 		<div id="iam-logo">
-			<img src="img/iam_logo_white.png">
+				<img src="img/iam_logo_white.png">
 		</div>
 		<div class="content" id="content">
-
+			
 			<div class="content-left">
 			</div>
 			<div class="content-right">
