--- a/IAM website FA15/career.html
+++ b/IAM website FA15/career.html
@@ -11,14 +11,14 @@ Designed by Sarah Minkyoung Cho
 		<meta name="description=" content="International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign (UIUC). IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
-
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
 		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	</head>
 	<body class="collapsed">
 		<!--<video muted autoplay loop class="video">
-			<source src="img/intro.mp4">
-			<p>Your browser doesn't support video</p>
-		</video>-->
+<source src="img/intro.mp4">
+<p>Your browser doesn't support video</p>
+</video>-->
 		<div class="nav">
 			<img src="img/iam_logo_white.png" onclick="window.location='index.html';">
 			<div class="nav-icons">
@@ -45,10 +45,10 @@ Designed by Sarah Minkyoung Cho
 			</div>
 		</div>
 		<div id="iam-logo">
-				<img src="img/iam_logo_white.png">
+			<img src="img/iam_logo_white.png">
 		</div>
 		<div class="content" id="content">
-			
+
 			<div class="content-left">
 			</div>
 			<div class="content-right">
