--- a/IAM website FA15/index.html
+++ b/IAM website FA15/index.html
@@ -11,7 +11,7 @@ Designed by Sarah Minkyoung Cho
 		<meta name="description=" content="International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign (UIUC). IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
-
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
 		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	</head>
 	<body class="collapsed">
