--- a/IAM website FA15/about.html
+++ b/IAM website FA15/about.html
@@ -5,72 +5,72 @@ Designed by Sarah Minkyoung Cho
 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>International Advertising Mob (IAM UIUC)</title>
-        <meta name="description=" content="International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign (UIUC). IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
-
-        <script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-    </head>
-    <body class="collapsed">
-        <!--<video muted autoplay loop class="video">
+	<head>
+		<meta charset="utf-8"/>
+		<title>International Advertising Mob (IAM UIUC)</title>
+		<meta name="description=" content="International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign (UIUC). IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
+		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+	</head>
+	<body class="collapsed">
+		<!--<video muted autoplay loop class="video">
 <source src="img/intro.mp4">
 <p>Your browser doesn't support video</p>
 </video>!--> 
-        <div class="nav">
-            <img src="img/iam_logo_white.png">
-            <div class="nav-icons">
-                <div style= "background-color: #141314" class= "icon" onclick="window.location='about.html';">
-                    <img src="img/icon_about.png">
-                    <p style= "color:#80ffd4">About</p>
-                </div>
-                <div class="icon" onclick="window.location='client.html';">
-                    <img src="img/icon_client.png">
-                    <p>Clients</p>
-                </div>
-                <div class="icon" onclick="window.location='team.html';">
-                    <img src="img/icon_team.png">
-                    <p>The Team</p>
-                </div>
-                <div class="icon" onclick="window.location='career.html';">
-                    <img src="img/icon_careers.png">
-                    <p>Careers</p>
-                </div>
-                <div class="icon" onclick="window.location='contact.html';">
-                    <img src="img/icon_contact.png">
-                    <p>Contact</p>
-                </div>
-            </div>
-        </div>
-        <div id="iam-logo">
-            <img src="img/iam_logo_white.png">
-        </div>
-        <div class="content" id="content">
+		<div class="nav">
+			<img src="img/iam_logo_white.png">
+			<div class="nav-icons">
+				<div style= "background-color: #141314" class= "icon" onclick="window.location='about.html';">
+					<img src="img/icon_about.png">
+					<p style= "color:#80ffd4">About</p>
+				</div>
+				<div class="icon" onclick="window.location='client.html';">
+					<img src="img/icon_client.png">
+					<p>Clients</p>
+				</div>
+				<div class="icon" onclick="window.location='team.html';">
+					<img src="img/icon_team.png">
+					<p>The Team</p>
+				</div>
+				<div class="icon" onclick="window.location='career.html';">
+					<img src="img/icon_careers.png">
+					<p>Careers</p>
+				</div>
+				<div class="icon" onclick="window.location='contact.html';">
+					<img src="img/icon_contact.png">
+					<p>Contact</p>
+				</div>
+			</div>
+		</div>
+		<div id="iam-logo">
+			<img src="img/iam_logo_white.png">
+		</div>
+		<div class="content" id="content">
 
-            <div class="content-left">
-                <div class="about-content-left">
-                   <ul> 
-                      <p><strong>
-                          About
-                          </strong> 
-                        </p>  
-                        <li>About IAM
-                        <li>Introduction
-                        </li>    
-                        </li>
-                    
-                </div>
+			<div class="content-left">
+				<div class="about-content-left">
+					<ul> 
+						<p><strong>
+							About
+							</strong> 
+						</p>  
+						<li>About IAM
+						<li>Introduction
+						</li>    
+						</li>
+
+				</div>
 
 
-                </ul>
-        </div>
-        <div class="content-right">
-            <div class="dead-zone">
-            </div>
-        </div>
-        </div>
-    <script language="javascript" type="text/javascript" src="js/custom.js"></script>
-    </body>
+				</ul>
+		</div>
+		<div class="content-right">
+			<div class="dead-zone">
+			</div>
+		</div>
+		</div>
+	<script language="javascript" type="text/javascript" src="js/custom.js"></script>
+	</body>
 </html>
