--- a/IAM website FA15/about.html
+++ b/IAM website FA15/about.html
@@ -61,13 +61,30 @@ Designed by Sarah Minkyoung Cho
                 </div>
             </div>
             <div class="content-right">
-                <div class="about-content-right-1">
+                <!--<div class="about-content-right-1">
                     <P> 
                         International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign. IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.
                        <p> We take a multidisciplinary approach to working on our clients’ business with our staff members coming from various scholarly backgrounds ranging from web designers to writers, psychologists, artists, mathematicians, and engineers. In our interactive environment, we work side by side, acquiring practical expertise in the field as projects continue. </p>
                         <p>You present your business, we present solutions—solutions to better the world. IAM not only provides solutions for your business but also helps out the community. Currently a World Vision child sponsor, IAM dedicates all profits from fund raisers and projects to children in need. At IAM, we present solutions to the world by participating in various charitable foundations.</p>
                      <p>   Present your business for better solutions—innovation for a good cause, IAM </p>
                     </P>
+                </div>-->
+            <div class= "about-content-right-2">
+                <p>I am Ju Young Choi, founder and president of International Advertising Mob.</p>
+                <p>It’s not about my intelligence, </p>
+                <p>It’s not about my advertising background, and </p>
+                <p>It’s not about showcasing my pride.</p>
+                <p>These are what I really stand for- values that define who IAM and what IAM.</p>
+                <p>I influence.</p>
+                <p>I provide solutions and contents that can lead the world.</p>
+                <p>I contribute.</p>
+                <p>I don’t stop at acquiring academic knowledge and contribute to the world.</p>
+                <p>I don’t stagnate. </p>
+                <p>I continue to face my problems and fix them through communicating with experts.</p>
+                <p>I challenge.</p>
+                <p>I challenge not for personal benefits, but for those in need.</p>
+                <p>Last but not least, I challenge with those who share the warmth.</p>
+                <p>IAM happy everyday.</p>
                 </div>
                 <!--<div class="dead-zone">
                 </div>-->
