--- a/IAM website FA15/career.html
+++ b/IAM website FA15/career.html
@@ -18,13 +18,13 @@ Designed by Sarah Minkyoung Cho
 		<!--<video muted autoplay loop class="video">
 <source src="img/intro.mp4">
 <p>Your browser doesn't support video</p>
-</video>-->
+</video>!--> 
 		<div class="nav">
 			<img src="img/iam_logo_white.png" onclick="window.location='index.html';">
 			<div class="nav-icons">
-				<div class="icon" onclick="window.location='about.html';">
+				<div style= "background-color: #141314" class= "icon" onclick="window.location='about.html';">
 					<img src="img/icon_about.png">
-					<p>About</p>
+					<p style= "color:#80ffd4">About</p>
 				</div>
 				<div class="icon" onclick="window.location='client.html';">
 					<img src="img/icon_client.png">
@@ -34,9 +34,9 @@ Designed by Sarah Minkyoung Cho
 					<img src="img/icon_team.png">
 					<p>The Team</p>
 				</div>
-				<div style="background-color:#03030a;" class="icon" onclick="window.location='career.html';">
+				<div class="icon" onclick="window.location='career.html';">
 					<img src="img/icon_careers.png">
-					<p style="color:80ffd4">Careers</p>
+					<p>Careers</p>
 				</div>
 				<div class="icon" onclick="window.location='contact.html';">
 					<img src="img/icon_contact.png">
@@ -50,12 +50,24 @@ Designed by Sarah Minkyoung Cho
 		<div class="content" id="content">
 
 			<div class="content-left">
+				<div class="about-content-left">
+					<h3>About</h3> 
+					<ul class="list about-list"> 
+						<li id="about1" class="list-active">About IAM</li>
+						<li id="about2">Introduction</li>
+					</ul>
+				</div>
 			</div>
 			<div class="content-right">
-				<div class="dead-zone">
+				<div class="career-content-right-1">
 				</div>
+				<div class= "career-content-right-2">
+				</div>
+				<!--<div class="dead-zone">
+</div>-->
 			</div>
 		</div>
 		<script language="javascript" type="text/javascript" src="js/custom.js"></script>
 	</body>
+	>>>>>>> Stashed changes
 </html>
