update before meeting

--- a/IAM website FA15/about.html
+++ b/IAM website FA15/about.html
@@ -49,7 +49,7 @@ Designed by Sarah Minkyoung Cho
 		</div>
 		<div class="content" id="content">
 
-			<div class="content-left">
+			<div class="content-left bg-left">
 				<div class="about-content-left">
 					<h3>About</h3> 
 					<ul class="list about-list"> 
@@ -59,7 +59,7 @@ Designed by Sarah Minkyoung Cho
 				</div>
 			</div>
 			<div class="content-right">
-				<div class="about-content-right-1">
+				<div class="about-content-right about-content-right-1">
 					<p> 
 						International Advertising Mob consists of some of the brightest and most innovative minds on campus at the University of Illinois at Urbana-Champaign. IAM offers free advertising and marketing consulting to our local international stores, utilizing our knowledge and imagination to the full extent.
 					</p>
@@ -70,7 +70,7 @@ Designed by Sarah Minkyoung Cho
 						Present your business for better solutions—innovation for a good cause, IAM 
 					</p>
 				</div>
-				<div class= "about-content-right-2">
+				<div class="about-content-right about-content-right-2">
 					<p>I am Ju Young Choi, founder and president of International Advertising Mob.</p>
 					<p>It’s not about my intelligence, </p>
 					<p>It’s not about my advertising background, and </p>
@@ -87,11 +87,8 @@ Designed by Sarah Minkyoung Cho
 					<p>Last but not least, I challenge with those who share the warmth.</p>
 					<p>IAM happy everyday.</p>
 				</div>
-				<!--<div class="dead-zone">
-</div>-->
 			</div>
 		</div>
 		<script language="javascript" type="text/javascript" src="js/custom.js"></script>
 	</body>
-	>>>>>>> Stashed changes
 </html>
