--- a/IAM website FA15/contact.html
+++ b/IAM website FA15/contact.html
@@ -38,9 +38,9 @@ Designed by Sarah Minkyoung Cho
 					<img src="img/icon_careers.png">
 					<p>Careers</p>
 				</div>
-				<div class="icon" onclick="window.location='contact.html';">
+				<div  style= "background-color: #141314" class="icon" onclick="window.location='contact.html';">
 					<img src="img/icon_contact.png">
-					<p>Contact</p>
+					<p style= "color:#80ffd4">Contact</p>
 				</div>
 			</div>
 		</div>
@@ -49,18 +49,16 @@ Designed by Sarah Minkyoung Cho
 		</div>
 		<div class="content" id="content">
 
-			<div class="content-left">
+			<div class="content-left bg-left">
                 <div class="contact-content-left">
-                    <p><strong>
-                        Contact
-                        </strong> 
-                    </p>
-                    <ul class>Email us
+                    <h3>Contact</h3>
+                    <ul>
+						<li class="contact-us">Email us</li>
                         <li> iamuiuc@gmail.com</li>                        
                     </ul>
-                    <ul class> Call us
-                        <li>1 (224) 875-0441
-                        </li>
+                    <ul> 
+						<li class="contact-us">Call us</li>
+                        <li>1 (224) 875-0441</li>
                     </ul>
                 </div>
 			</div>
