--- a/IAM website FA15/index.html
+++ b/IAM website FA15/index.html
@@ -14,7 +14,7 @@ Designed by Sarah Minkyoung Cho
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
 		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 	</head>
-	<body class="">
+	<body class="collapsed">
 		<video muted autoplay loop class="video">
 			<source src="img/intro.mp4">
 			<p>Your browser doesn't support video</p>
@@ -49,7 +49,7 @@ Designed by Sarah Minkyoung Cho
 		</div>
 		<div class="content" id="content">
 
-			<div class="content-left">
+			<div class="content-left main-left">
 			</div>
 			<div class="content-right">
 				<div class="dead-zone">
