--- a/IAM website FA15/career.html
+++ b/IAM website FA15/career.html
@@ -22,9 +22,9 @@ Designed by Sarah Minkyoung Cho
 		<div class="nav">
 			<img src="img/iam_logo_white.png" onclick="window.location='index.html';">
 			<div class="nav-icons">
-				<div style= "background-color: #141314" class= "icon" onclick="window.location='about.html';">
+				<div class= "icon" onclick="window.location='about.html';">
 					<img src="img/icon_about.png">
-					<p style= "color:#80ffd4">About</p>
+					<p>About</p>
 				</div>
 				<div class="icon" onclick="window.location='client.html';">
 					<img src="img/icon_client.png">
@@ -34,9 +34,9 @@ Designed by Sarah Minkyoung Cho
 					<img src="img/icon_team.png">
 					<p>The Team</p>
 				</div>
-				<div class="icon" onclick="window.location='career.html';">
+				<div style="background-color: #141314" class="icon" onclick="window.location='career.html';">
 					<img src="img/icon_careers.png">
-					<p>Careers</p>
+					<p style= "color:#80ffd4">Careers</p>
 				</div>
 				<div class="icon" onclick="window.location='contact.html';">
 					<img src="img/icon_contact.png">
@@ -50,24 +50,35 @@ Designed by Sarah Minkyoung Cho
 		<div class="content" id="content">
 
 			<div class="content-left">
-				<div class="about-content-left">
-					<h3>About</h3> 
-					<ul class="list about-list"> 
-						<li id="about1" class="list-active">About IAM</li>
-						<li id="about2">Introduction</li>
+				<div class="career-content-left">
+					<h3>Careers</h3> 
+					<ul class="list"> 
+						<li class="career-list list-active" id="career1">Advisory Committee</li>
+						<li class="career-list" id="career2">Account Executive Team</li>
+						<li class="career-list" id="career3">Business Team</li>
+						<li class="career-list" id="career4">Creative Team</li>
+						<li class="career-list" id="career5">Internal Management Team</li>
+						<li class="career-list" id="career6">Media Team</li>
+						<li class="career-list" id="career7">Tech Team</li>
+						<li class="career-list" id="career8">IAM China</li>
+						<li class="career-list" id="career9">Members</li>
 					</ul>
 				</div>
 			</div>
 			<div class="content-right">
-				<div class="career-content-right-1">
-				</div>
-				<div class= "career-content-right-2">
-				</div>
+				<div class="career-content-right-1">1</div>
+				<div class="career-content-right-2 right-display-none">2</div>
+				<div class="career-content-right-3 right-display-none">3</div>
+				<div class="career-content-right-4 right-display-none">4</div>
+				<div class="career-content-right-5 right-display-none">5</div>
+				<div class="career-content-right-6 right-display-none">6</div>
+				<div class="career-content-right-7 right-display-none">7</div>
+				<div class="career-content-right-8 right-display-none">8</div>
+				<div class="career-content-right-9 right-display-none">9</div>
 				<!--<div class="dead-zone">
 </div>-->
 			</div>
 		</div>
 		<script language="javascript" type="text/javascript" src="js/custom.js"></script>
 	</body>
-	>>>>>>> Stashed changes
 </html>
