--- a/IAM website FA15/about.html
+++ b/IAM website FA15/about.html
@@ -13,6 +13,7 @@ Designed by Sarah Minkyoung Cho
 		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:700,400|PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
 		<script language="javascript" type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+		<script language="javascript" type="text/javascript" src="js/jquery-ui.min.js"></script>
 	</head>
 	<body class="collapsed">
 		<!--<video muted autoplay loop class="video">
@@ -48,7 +49,6 @@ Designed by Sarah Minkyoung Cho
 			<img src="img/iam_logo_white.png">
 		</div>
 		<div class="content" id="content">
-
 			<div class="content-left bg-left">
 				<div class="about-content-left">
 					<h3>About</h3> 
